change about me write up

--- a/index.html
+++ b/index.html
@@ -76,20 +76,24 @@
 
 							<header>
 								<h2 class="alt">Hi! I'm <strong>Mike</strong></h2>
-								<h4> Developer | Entrepreneur</h4>
+								<h1>Developer | Entrepreneur</h1>
 							</header>
 							<p class="about">
-								I'm a software engineer based in NYC, specializing
+								I'm a software developer based in NYC, specializing
 								in Ruby on Rails, JavaScript, React.js.
-								I was inspired to learn after my experience executing
-								business models for mobile applications.
+								<br />
+								<br />
+								I was inspired to learn code after generating
+								business models for several mobile applications and working
+								with a developer.
 								I began my coding journey at App Academy,
 								an immersive full-stack web development program.
-								I am passionate about great design and building products
-								that help people.
+								I am passionate about building products that
+								solve big problems and writing beautiful code.
+								<br />
 								<br />
 								Outside of coding, I enjoy playing basketball, hiking outdoors,
-								urban exploring, and reading good literature.
+								urban exploring, and reading non-fiction.
 							</p>
 
 							<footer>
