change about me write up

--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
 								<br />
 								I was inspired to learn code after generating
 								business models for several mobile applications and working
-								with a developer.
-								I began my coding journey at App Academy,
+								with developers.
+								I officially began my coding journey at App Academy,
 								an immersive full-stack web development program.
 								I am passionate about building products that
 								solve big problems and writing beautiful code.
