--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 								<h1>Developer | Entrepreneur</h1>
 							</header>
 							<p class="about">
-								I'm a software developer based in NYC, specializing
+								I'm a software developer based in New York, specializing
 								in Ruby on Rails, JavaScript, React.js.
 								<br />
 								<br />
@@ -225,7 +225,8 @@
 
 				<!-- Copyright -->
 					<ul class="copyright">
-						<li>&copy; Michael K. Shin All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Michael K. Shin All rights reserved.</li>
+						<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 
 			</div>
