add background to footer

--- a/index.html
+++ b/index.html
@@ -84,12 +84,12 @@
 								<br />
 								<br />
 								I was inspired to learn code after generating
-								business models for several mobile applications and working
-								with developers.
-								I officially began my coding journey at App Academy,
+								business models for several mobile applications and
+								working with developers.
+								I officially began my journey at App Academy,
 								an immersive full-stack web development program.
-								I am passionate about building products that
-								solve big problems and writing beautiful code.
+								I am passionate about building products that solve big
+								problems and writing beautiful code.
 								<br />
 								<br />
 								Outside of coding, I enjoy playing basketball, hiking outdoors,
