change link for hypetrack

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 										<h4><strong>HypeTrack</strong></h4>
 									</header>
 									<article class="item">
-										<a href="http://hypetrain.herokuapp.com/" class="image fit"><img src="images/hypetrack.png" alt="" /></a>
+										<a href="http://hypetrack.herokuapp.com/" class="image fit"><img src="images/hypetrack.png" alt="" /></a>
 									</article>
 									<p class="project">
 										A music blog aggregator inspired by Hype Machine. Stream popular songs, search by genre, and save your favorites.
