--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@
 
 								<div class="4u$ 12u$(mobile)">
 									<header>
-										<h4><strong>ActiveRecord Lite</strong></h4>
+										<h4><strong>AR Lite</strong></h4>
 									</header>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/active_record.png" alt="" /></a>
+										<a href="https://github.com/whomikeshin/ar_lite" class="image fit"><img src="images/active_record.png" alt="" /></a>
 									</article>
 									<p class="project">
 										A lightweight ORM based on Rails ActiveRecord.
