--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 <html>
 	<head>
 		<title>Michael K. Shin</title>
+		<link rel="icon"
+        	type="image/png"
+        	src="images/favicon.png">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
