changed about me blurb

--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
 								I officially began my journey at App Academy,
 								an immersive full-stack web development program.
 								I am passionate about building products that solve big
-								problems and writing beautiful code.
+								problems and writing good code.
 								<br />
 								<br />
-								Outside of coding, I enjoy playing basketball, hiking outdoors,
-								urban exploring, and reading non-fiction.
+								Outside of coding, I enjoy basketball, being outdoors,
+								watching movies, and reading non-fiction.
 							</p>
 
 							<footer>
