changed about me blurb

--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
 								problems and writing good code.
 								<br />
 								<br />
-								Outside of coding, I enjoy basketball, being outdoors,
-								watching movies, and reading non-fiction.
+								Outside of coding, I am a huge basketball nerd-jock. I also
+								enjoy traveling, watching films, and reading non-fiction.
 							</p>
 
 							<footer>
