added new background and changed about me

--- a/index.html
+++ b/index.html
@@ -78,17 +78,17 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt">Hi! I'm <strong>Mike</strong></h2>
-								<h1>Developer | Entrepreneur</h1>
+								<h2 class="alt">hello world<strong>!</strong></h2>
+								<h1>I am <strong>Mike</strong></h1>
 							</header>
 							<p class="about">
 								I'm a software developer based in New York, specializing
 								in Ruby on Rails, JavaScript, React.js.
-								<br />
+								<!-- <br />
 								<br />
 								I was inspired to learn code after generating
 								business models for several mobile applications and
-								working with developers.
+								working with developers. -->
 								I officially began my journey at App Academy,
 								an immersive full-stack web development program.
 								I am passionate about building products that solve big
