changed project name

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
 							<header>
 								<h2 class="alt">hello world<strong>!</strong></h2>
-								<h1>I am <strong>Mike</strong></h1>
+								<!-- <h1>I am <strong>Mike</strong></h1> -->
 							</header>
 							<p class="about">
 								I'm a software developer based in New York, specializing
@@ -95,8 +95,8 @@
 								problems and writing good code.
 								<br />
 								<br />
-								Outside of coding, I am a huge basketball nerd-jock. I also
-								enjoy traveling, watching films, and reading non-fiction.
+								Outside of coding, I am a huge basketball nerd. I also
+								enjoy being outdoors, watching films, and reading non-fiction.
 							</p>
 
 							<footer>
@@ -140,7 +140,7 @@
 
 								<div class="4u$ 12u$(mobile)">
 									<header>
-										<h4><strong>AR Lite</strong></h4>
+										<h4><strong>Armor</strong></h4>
 									</header>
 									<article class="item">
 										<a href="https://github.com/whomikeshin/ar_lite" class="image fit"><img src="images/active_record.png" alt="" /></a>
