added new resume

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 										<h4><strong>Armor</strong></h4>
 									</header>
 									<article class="item">
-										<a href="https://github.com/whomikeshin/ar_lite" class="image fit"><img src="images/active_record.png" alt="" /></a>
+										<a href="https://github.com/whomikeshin/armor" class="image fit"><img src="images/active_record.png" alt="" /></a>
 									</article>
 									<p class="project">
 										A lightweight ORM based on Rails ActiveRecord.
