changed linkedin link

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 							<ul class="icons">
 								<li><a href="mailto:michaelkshin@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
 								<li><a href="https://github.com/whomikeshin" class="icon fa-github"><span class="label">Github</span></a></li>
-								<li><a href="https://linkedin.com/in/michael-k-shin-43a767bb" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
+								<li><a href="https://linkedin.com/in/mikekshin" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
 							</ul>
 
 							<div class="row">
