add revised resume

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 							</p>
 
 							<footer>
-								<a href="assets/michaelkshin_cv.pdf" class="button scrolly">Resume</a>
+								<a href="assets/michaelkshin_resume.pdf" class="button scrolly">Resume</a>
 							</footer>
 						</div>
 					</section>
