--- a/index.html
+++ b/index.html
@@ -82,21 +82,8 @@
 								<!-- <h1>I am <strong>Mike</strong></h1> -->
 							</header>
 							<p class="about">
-								I'm a software developer based in New York, specializing
-								in Ruby on Rails, JavaScript, React.js.
-								<!-- <br />
-								<br />
-								I was inspired to learn code after generating
-								business models for several mobile applications and
-								working with developers. -->
-								I officially began my journey at App Academy,
-								an immersive full-stack web development program.
-								I am passionate about building products that solve big
-								problems and writing good code.
-								<br />
-								<br />
-								Outside of coding, I am a huge basketball nerd. I also
-								enjoy being outdoors, watching films, and reading non-fiction.
+								Software Developer | NYC
+								scripts on Scripts
 							</p>
 
 							<footer>
