change resume and about me

--- a/index.html
+++ b/index.html
@@ -82,8 +82,13 @@
 								<!-- <h1>I am <strong>Mike</strong></h1> -->
 							</header>
 							<p class="about">
-								Software Developer | NYC
-								scripts on Scripts
+								I'm a software developer based in New York, specializing
+								in Ruby and JavaScript.
+								<br />
+								I officially began my journey at App Academy,
+								an immersive full-stack web development program.
+								I am all about building products that solve real-life
+								problems.
 							</p>
 
 							<footer>
