Change header content

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 						<ul class="icons">
 							<li><a href="mailto:michaelkshin@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
 							<li><a href="https://github.com/whomikeshin" class="icon fa-github"><span class="label">Github</span></a></li>
-							<li><a href="https://linkedin.com/in/michael-k-shin-43a767bb" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
+							<li><a href="https://linkedin.com/in/mikekshin" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
 						</ul>
 
 				</div>
@@ -78,17 +78,13 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt">hello world<strong>!</strong></h2>
-								<!-- <h1>I am <strong>Mike</strong></h1> -->
+								<h2 class="alt">scripts<strong>|</strong>scripts</h2>
+								<h1>Hi! I am <strong>Mike</strong></h1>
 							</header>
 							<p class="about">
-								I'm a software developer based in New York, specializing
-								in Ruby and JavaScript.
+								I write most things in English, but sometimes in Ruby
+								and Javascript.
 								<br />
-								I officially began my journey at App Academy,
-								an immersive full-stack web development program.
-								I am all about building products that solve real-life
-								problems.
 							</p>
 
 							<footer>
