--- a/index.html
+++ b/index.html
@@ -78,17 +78,24 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt">scripts<strong>|</strong>scripts</h2>
-								<h1>Hi! I am <strong>Mike</strong></h1>
+								<h2 class="alt">welcome<strong>!</strong></h2>
+								<!-- <h1>I am <weak>Mike</weak></h1> -->
 							</header>
 							<p class="about">
-								I write most things in English, but sometimes in Ruby
-								and Javascript.
-								<br />
+								I write most things in English, but sometimes in Ruby and JavaScript.
+								<br>
+								<br>
+								<i>We must all suffer one of two things:
+									<br>
+									the pain of discipline
+									or the pain of regret or disappointment.
+								</i>
+								<br>
+								<strong>Jim Rohn</strong>
 							</p>
 
 							<footer>
-								<a href="assets/michaelkshin_resume.pdf" class="button scrolly">Resume</a>
+								<!-- <a href="assets/michaelkshin_resume.pdf" class="button scrolly">Resume</a> -->
 							</footer>
 						</div>
 					</section>
